# localdocs-mcp

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/: GDRIVE.ko.md  INSTALL.ko.md
src/localdocs_mcp/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  gdrive.py  indexer.py  search.py  server.py  store.py
src/localdocs_mcp/extractors/: __init__.py  hwp.py  hwpx.py  image.py  office.py  pdf.py  text.py
tests/: conftest.py  test_extractors.py  test_gdrive.py  test_store_and_search.py
