[project]
name = "localdocs-mcp"
version = "0.1.0"
description = "100% 로컬 문서 검색 MCP 서버 — txt/pdf/docx/pptx/hwp/hwpx/이미지를 인덱싱하고 하이브리드(BM25+시맨틱) 검색을 LLM에 제공"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Huntbae" }]
keywords = ["mcp", "rag", "search", "hwp", "hwpx", "korean", "local-first"]
dependencies = [
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
    "olefile>=0.46",
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
ocr = ["easyocr>=1.7"]
convert = ["markitdown>=0.1.1"]
dev = ["pytest>=8.0"]

[project.scripts]
localdocs-mcp = "localdocs_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localdocs_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
